edit picture element

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
   <div class="product-preview" role="main">
     <picture class="product-img">
-      <source media="(min-width: 768px)" srcset="./images/image-product-desktop.jpg">
-      <img src="./images/image-product-mobile.jpg" alt="Perfume photo">
+      <source media="(max-width: 767px)" srcset="./images/image-product-mobile.jpg" />
+      <source media="(min-width: 768px)" srcset="./images/image-product-desktop.jpg" />
+      <img src="./images/image-product-desktop.jpg" alt="Perfume photo" />
     </picture>
     
     <div class="product-info">
